# FindDuplicateVideos

./: FindDuplicateVideos.py  README.md  pyproject.toml  requirements.txt
src/: common.py  file_manager.py  logger.py  video_processing.py
